--- a/ressources/css/style.css
+++ b/ressources/css/style.css
@@ -77,15 +77,20 @@ nav li {
   padding: 0.75rem 0;
 }
 
+.mobile-nav li {
+  display: none;
+}
+
 /* Main */
 
 .main {
-  padding: 4rem 0 3rem 0;
+  padding: 3rem 0 4rem 0;
 }
 
 .product {
   width: 30%;
   text-align: center;
+  margin-bottom: 3rem;
 }
 
 .product p {
@@ -108,7 +113,6 @@ nav li {
 }
 
 .info {
-  margin-top: 3rem;
   width: 35%;
   color: black;
 }
@@ -122,4 +126,63 @@ nav li {
 footer {
   width: 100%;
   height: 5rem;
+}
+
+/* Responsive */
+
+
+
+@media only screen and (max-width: 1024px) {
+
+  .container {width: 100%;}
+
+  .desktop-nav {display: none;}
+
+  .mobile-nav li{
+    display: inline;
+    margin: 0 auto;
+  }
+
+  #glasses {display: none;}
+
+  .product {width: 47%;}
+
+}
+
+@media only screen and (max-width: 470px) {
+
+  .container {
+    justify-content: center;
+    flex-wrap: wrap;
+  }
+
+  #logo {
+    height: 3rem;
+  }
+
+  #logo span {
+    display: none;
+  }
+
+  #mainbanner {height: 15rem;}
+
+  .news {
+    margin-top: 10rem;
+    width: 100%;
+    padding: 1rem 2rem;
+  }
+
+  .news h3 {font-size: 0.77rem;}
+
+  .news p {font-size: 1rem;}
+
+  #watch {display: none;}
+
+  .product {width: 90%;}
+
+  .info {
+    width: 90%;
+    margin-bottom: 0.5rem;
+  }
+
 }
